--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <script src="js/moment-1.js"></script>
     <script src="js/moment.js"></script>
     <script src="js/timer.js"></script>
+    <!--    FONTS-->
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Spectral" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
 </head>
 
 <body>
@@ -44,26 +51,32 @@
         <h2 id="counter">Countdown Starts...</h2>
     </div>
 
-    <div class="ppt"><br><br>
-        <h1> Paper Presentation</h1>
-        <h2>Last date to submit the papers: 15/8/2017</h2>
-        <br><br>
-        <p></p>
-    </div>
+    <section style="background:url(../img/ppt.jpg)">
+        <div class="overlay-bg">
+            <div class="container relative ppt"><br><br>
+                <h1> Paper Presentation</h1>
+                <h2>Last date to submit the papers: 15/8/2017</h2>
+                <br><br>
+                <p></p>
+            </div>
+        </div>
+    </section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 bot">
+            <div class="col-sm-6 roborace">
                 <center>
-                    <h2>Bot Race</h2>
-                    <p>Some description</p>
+                    <h2>ROBORACE</h2>
+                    <h3>FOR RACERZZ</h3>
+                    <h5>This is an event where ur bot will be tested into a track with lot of obstacles.</h5>
+                    <p><b>Rules:</b><br> 1. The size of the bot should not be more than 30 x 30 x 30. <br> 2. Maximum of 3 participants are allowed. <br> 3. The bot may be wired or wireless. <br>4. The power supply will be provided by the college. <br>5. The bot is allowed to race for 2 times and the best of 2 will be taken into account. <br>6. If the bot falls from the track for more than 3 times, the bot will be disqualified. <br> 7. Every time a bot falls from the track, 3 seconds will be reduced. <br> 8. The bot that completes the race in minimum time is declared the winner. <br> 9. The decision by the panel is final.</p>
                     <div class="card">
                         <h3>REGISTER NOW</h3>
                     </div>
                 </center>
             </div>
-            <div class="col-sm-6 bot">
+            <div class="col-sm-6 jam">
                 <center>
-                    <h2>Bot Race</h2>
+                    <h2>JAM TO WIN IT</h2>
                     <p>Some description</p>
                     <div class="card">
                         <h3>REGISTER NOW</h3>
@@ -95,13 +108,13 @@
     </div>
     <!-- Container (Contact Section) -->
     <div class="container"><br><br><br>
-        <h2 class="text-center"><b>CONTACT</b></h2>
+        <h2 class="text-center"><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2>
         <div class="row">
             <div class="col-sm-4">
                 <p><b>Contact us</b></p>
-                <p><span class="glyphicon glyphicon-map-marker"></span>Sai Leo Nagar,West Tambaram, Chennai-44</p>
+                <p><span><img src="https://png.icons8.com/marker/color/24" title="Marker" width="24" height="24"></span>Sai Leo Nagar,West Tambaram, Chennai-44</p>
                 <p><span class="glyphicon glyphicon-phone"></span> +91 9578154721</p>
-                <p><span class="glyphicon glyphicon-envelope"></span> praestantia2k17@sairamit.edu.in</p>
+                <p><img src="https://png.icons8.com/gmail/color/24" title="Gmail" width="24" height="24"> praestantia2k17@sairamit.edu.in</p>
             </div>
             <div class="col-sm-4 slideanim">
                 <div class="row">
