--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2 id="counter">Countdown Starts...</h2>
     </div>
 
-    <section style="background:url(../img/ppt.jpg)">
+    <section style="background:url(/img/ppt.jpg)">
         <div class="overlay-bg">
             <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
