--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
     </section>
     <h1 class="events">EVENTS</h1>
-    <section style="background:url(/img/ppt.jpg)">
+    <section class="sec-ppt">
         <div class="overlay-bg">
             <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
@@ -95,7 +95,7 @@
                 <p></p>
             </div>
         </div>
-    </section>
+    </section><br>
     <div class="container">
         <div class="row">
             <div class="col-sm-6 roborace">
@@ -136,14 +136,17 @@
             <div class="col-sm-6 conn">
                 <center>
                     <h2>CONNECTIONS</h2>
-                    <p>Some description</p>
+                    <h3>"An enthralling event to connect your neurons to complete your brain circuit!"</h3>
+                    <p>Get ready to trigger your technical knowledge by connecting your way through three rounds by using the clues in the pictures.</p>
                 </center>
+                <p><b>Rules:</b><br>1.Only two members are welcomed for a team. <br>2. College ID card is mandatory for registiration <br>3. Unfair game leads to disquallification of the team.</p>
+
             </div>
         </div>
     </div>
     <hr>
     <!-- Container (Contact Section) -->
-    <div class="container"><br><br><br>
+    <div class="container"><br>
         <h2 class="text-center"><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2><br>
         <div class="row">
             <div class="col-sm-4">
