--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
             </div>
         </div>
     </div>
+    <section class="social">
+        <div class="container">
+            <center>
+                <h3>SOCIAL MEDIA</h3><br>
+                <div class="pad">
+                    <a href="facebook.com"><img src="https://png.icons8.com/facebook/color/48" title="Facebook" width="48" height="48"></a>
+                    <a href="facebook.com"><img src="https://png.icons8.com/instagram/color/48" title="Instagram" width="48" height="48"></a>
+                    <a href="facebook.com"><img src="https://png.icons8.com/twitter/color/48" title="Twitter" width="48" height="48"></a>
+                </div>
+            </center>
+
+        </div><br></section>
     <script>
         // Set the date we're counting down to
         var countDownDate = new Date("Aug 30, 2017 10:00:00").getTime();
