--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/wow.min.js"></script>
     <script src="js/countUp.js"></script>
+    <script src="js/materialize.js"></script>
     <!--    FONTS-->
     <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
@@ -146,18 +147,65 @@
         </div>
     </div>
     <hr>
+    <!-- section begin -->
+    <section>
+        <div class="container register">
+            <center>
+                <h2 class="wow pulse infinite"><img src="https://png.icons8.com/edit-property/ultraviolet/40" title="Edit Property" width="40" height="40"><b> REGISTER SOON</b></h2>
+            </center>
+            <div class="row">
+                <input class="form-control" type="text" name="name" id="name" placeholder="Name">
+            </div>
+            <div class="row">
+                <input class="form-control" type="email" name="email" id="email" placeholder="Email">
+            </div>
+            <div class="row">
+                <input class="form-control" type="phone" name="phone" id="phone" placeholder="Phone number">
+            </div>
+            <div class="row">
+                <input class="form-control" type="text" name="clg" id="clg" placeholder="College">
+            </div>
+            <div class="row">
+                <div class="col-md-6" style="padding-right: 5px;">
+                    <select class="form-control" type="text" name="dept" id="dept" placeholder="Department">
+                                                <option>ECE</option>
+                                                <option>CSE</option>
+                                                <option>EEE</option>
+                                                <option>IT</option>
+                                                <option>MECH</option>
+                                                <option>OTHERS</option>
+                                            </select>
+                </div>
+                <div class="col-md-6" style="padding-left: 5px;">
+                    <select class="form-control" type="text" name="year" id="year" placeholder="Year">
+                                                <option>IV</option>
+                                                <option>III</option>
+                                                <option>II</option>
+                                                <option>I</option>
+                                            </select>
+                </div>
+            </div>
+            <center>
+                <div class="row buton">
+                    <a href="#">
+                        <h5>REGISTER</h5>
+                    </a>
+                </div>
+            </center>
+        </div>
+    </section>
     <!-- Container (Contact Section) -->
     <div class="container"><br>
-        <h2 class="text-center wow pulse infinite"><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2><br>
+        <h2 class="text-center "><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2><br>
         <div class="row">
             <div class="col-sm-4">
                 <p><b>Contact us</b></p>
-                <p><span><img src="https://png.icons8.com/marker/color/24" title="Marker" width="24" height="24"></span>Sai Leo Nagar,West Tambaram, Chennai-44</p>
+                <p><img src="https://png.icons8.com/marker/ultraviolet/20" title="Marker" width="30" height="30"> Sai Leo Nagar,West Tambaram, Chennai-44</p>
                 <p><img src="https://png.icons8.com/iphone/office/30" title="iPhone" width="30" height="30">+91 9578154721</p>
-                <p><img src="https://png.icons8.com/gmail/color/24" title="Gmail" width="24" height="24"> praestantia2k17@sairamit.edu.in</p>
+                <p><img src="https://png.icons8.com/gmail/color/24" title="Gmail" width="34" height="34"> praestantia2k17@sairamit.edu.in</p>
             </div>
             <div class="col-sm-4 slideanim">
-                <div class="row">
+                <div class="form row">
                     <div class="col-sm-6 form-group">
                         <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
                     </div>
@@ -223,6 +271,7 @@
         }, 1000);
 
     </script>
+    <script src="js/materialize.js"></script>
     <script src="js/main.js"></script>
     <script src="js/countUp.js"></script>
     <script>
@@ -263,6 +312,8 @@
         new WOW().init();
 
     </script>
+    <script src="js/materialize.js"></script>
+
 </body>
 
 </html>
