--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="sec">
         <div class="container overlay-bg head">
             <h3 class="wow zoomInDown">
-                <center>ON AUGUST 30,2017 <br>SRI SAIRAM INSTITUTE OF TECHNOLOGY<br> DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING <br><br>Presents</center>
+                <center>SRI SAIRAM INSTITUTE OF TECHNOLOGY<br> DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING <br><br>Presents</center>
             </h3>
             <p class="wow bounceIn">
                 <svg viewBox="0 0 1000 100">
@@ -51,9 +51,9 @@
 				></use>
 			</svg></p>
             <center>
-                <h4 style="color:blue;">FELL THE TECH!!!</h4>
+                <h4 style="color:white;">FEEL THE TECH!!!</h4>
             </center>
-            <h2 id="counter">Countdown Starts...</h2>
+            <h2 id="counter">ON AUGUST 30,2017</h2>
             <div class="row info" id="info">
                 <div class="col-sm-3">
                     <center>
@@ -88,7 +88,7 @@
         <div class="overlay-bg">
             <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
-                <h2>Last date to submit the papers: 15/8/2017</h2>
+                <h2>Last date to submit the papers: <b style="color:red;">15/8/2017</b></h2>
                 <p><b>The following rules should be followed while submitting your paper:</b><br> 1. It is madatory that, your paper should be in the IEEE format. <br> 2. A paper can be submitted , representing a maximum of two members. <br>3. The paper must be submitted only to the above mentioned mail Id.
                 </p>
                 <p>
@@ -160,12 +160,20 @@
                 <input class="form-control" type="email" name="email" id="email" placeholder="Email">
             </div>
             <div class="row">
-                <input class="form-control" type="phone" name="phone" id="phone" placeholder="Phone number">
+                <input class="form-control" type="phone" name="phone" id="phone" placeholder="Phone">
             </div>
             <div class="row">
                 <input class="form-control" type="text" name="clg" id="clg" placeholder="College">
             </div>
             <div class="row">
+                <div class="col-md-6" style="padding-left: 5px;">
+                    <select class="form-control" type="text" name="year" id="year" placeholder="Year">
+                                                <option>IV</option>
+                                                <option>III</option>
+                                                <option>II</option>
+                                                <option>I</option>
+                                            </select>
+                </div>
                 <div class="col-md-6" style="padding-right: 5px;">
                     <select class="form-control" type="text" name="dept" id="dept" placeholder="Department">
                                                 <option>ECE</option>
@@ -176,14 +184,7 @@
                                                 <option>OTHERS</option>
                                             </select>
                 </div>
-                <div class="col-md-6" style="padding-left: 5px;">
-                    <select class="form-control" type="text" name="year" id="year" placeholder="Year">
-                                                <option>IV</option>
-                                                <option>III</option>
-                                                <option>II</option>
-                                                <option>I</option>
-                                            </select>
-                </div>
+
             </div>
             <center>
                 <div class="row buton">
@@ -194,12 +195,68 @@
             </center>
         </div>
     </section>
+    <hr>
+    <section>
+
+        <div class="container">
+            <div id="story" class="container time-bg">
+                <center>
+                    <h1 class="time-head"><b>TIMELINE</b></h1>
+                </center>
+                <ul class="timeline">
+                    <li>
+                        <div class="direction-r wow bounceInRight">
+                            <div class="flag-wrapper"><span class="flag ">Registration</span><span class="time-wrapper"><span class="time">9:00 AM-10:00 AM</span></span>
+                            </div>
+                            <div class="desc">The participants should register and get ID card.</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="direction-l wow bounceInLeft">
+                            <div class="flag-wrapper"><span class="flag">Inauguration</span><span class="time-wrapper"><span class="time">10:00 AM</span></span>
+                            </div>
+                            <div class="desc">The inauguration will take place at auditorium .The sympo will be inaugurated by special cheif guest.</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="direction-r wow bounceInRight">
+                            <div class="flag-wrapper"><span class="flag">Paper presentation</span><span class="time-wrapper"><span class="time">10:30 AM</span></span>
+                            </div>
+                            <div class="desc">2017 as proved to be cool year so far for us , During Initial Months we had a new member to lead a pecular Concept and also we crowned to become the ISGW , Innothon's Winner ! </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="direction-l wow bounceInLeft">
+                            <div class="flag-wrapper"><span class="flag">Events</span><span class="time-wrapper"><span class="time">11:00 AM</span></span>
+                            </div>
+                            <div class="desc">Events will be started according to its respective time.</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="direction-r wow bounceInRight">
+                            <div class="flag-wrapper"><span class="flag">Lunch</span><span class="time-wrapper"><span class="time">1:00 PM</span></span>
+                            </div>
+                            <div class="desc">Both Veg and Non-Veg food will be provided in college canteen.</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="direction-l wow bounceInLeft">
+                            <div class="flag-wrapper"><span class="flag"> Valedictory ceremony</span><span class="time-wrapper"><span class="time">3:00 PM</span></span>
+                            </div>
+                            <div class="desc">It's the final part of sympo.The prize and participation certificate will be provided.</div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <hr><br>
     <!-- Container (Contact Section) -->
-    <div class="container"><br>
+    <div class="con">
         <h2 class="text-center "><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2><br>
         <div class="row">
             <div class="col-sm-4">
-                <p><b>Contact us</b></p>
+                <h5 class="text-center"> <b>Contact us</b></h5>
                 <p><img src="https://png.icons8.com/marker/ultraviolet/20" title="Marker" width="30" height="30"> Sai Leo Nagar,West Tambaram, Chennai-44</p>
                 <p><img src="https://png.icons8.com/iphone/office/30" title="iPhone" width="30" height="30">+91 9578154721</p>
                 <p><img src="https://png.icons8.com/gmail/color/24" title="Gmail" width="34" height="34"> praestantia2k17@sairamit.edu.in</p>
@@ -243,8 +300,6 @@
     <script>
         // Set the date we're counting down to
         var countDownDate = new Date("Aug 30, 2017 10:00:00").getTime();
-
-        // Update the count down every 1 second
         var x = setInterval(function() {
 
             // Get todays date and time
@@ -266,9 +321,9 @@
             // If the count down is over, write some text 
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("counter").innerHTML = "EXPIRED";
+                document.getElementById("counter").innerHTML = "NOW!!!";
             }
-        }, 1000);
+        }, 5000);
 
     </script>
     <script src="js/materialize.js"></script>
