--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="css/text.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/pre1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"></script>
     <link rel="stylesheet" href="css/animate.css">
+
     <script src="js/wow.min.js"></script>
     <script src="js/countUp.js"></script>
     <script src="js/materialize.js"></script>
@@ -28,11 +29,23 @@
 <body>
     <section class="sec">
         <div class="container overlay-bg head">
-            <h3 class="wow zoomInDown">
-                <center>SRI SAIRAM INSTITUTE OF TECHNOLOGY<br> DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING <br><br>Presents</center>
+            <h3 class="wow ">
+                <div class="row">
+                    <div class="col-sm-4 wow fadeInLeft">
+                        <p style="text-align:center;"><img src="img/Praestantia-logo.png" alt="logo" class="logo"></p>
+                    </div>
+                    <div class="col-sm-4">
+                        <center><br> DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING
+                        </center>
+                    </div>
+                    <div class="col-sm-4 wow fadeInRight">
+                        <p style="text-align:center;"><img src="img/sairam-logo.png" alt=""></p>
+                    </div>
+                </div><br>
+                <center> <br>Presents</center>
             </h3>
             <p class="wow bounceIn">
-                <svg viewBox="0 0 1000 100">
+                <svg viewBox="0 0 800 100">
 				<!-- Symbol -->
 				<symbol id="s-text">
 				<text text-anchor="middle"
@@ -52,7 +65,7 @@
 			</svg></p>
             <center>
                 <h4 style="color:white;">FEEL THE TECH!!!</h4>
-            </center>
+            </center><br>
             <h2 id="counter">ON AUGUST 30,2017</h2>
             <div class="row info" id="info">
                 <div class="col-sm-3">
@@ -80,7 +93,7 @@
                         </center>
                     </a>
                 </div>
-            </div>
+            </div><br>
         </div>
     </section>
     <h1 class="events">EVENTS</h1>
@@ -100,20 +113,15 @@
     </section><br>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 roborace wow slideInLeft">
+            <div class="col-sm-6 card roborace wow slideInLeft" style="left:-10px;">
                 <center>
                     <h2>ROBORACE</h2>
                     <h3>"FOR RACERZZ"</h3>
                     <h5>This is an event where ur bot will be tested into a track with lot of obstacles.</h5>
                     <p><b>Rules:</b><br> 1. The size of the bot should not be more than 30 x 30 x 30. <br> 2. Maximum of 3 participants are allowed. <br> 3. The bot may be wired or wireless. <br>4. The power supply will be provided by the college. <br>5. The bot is allowed to race for 2 times and the best of 2 will be taken into account. <br>6. If the bot falls from the track for more than 3 times, the bot will be disqualified. <br> 7. Every time a bot falls from the track, 3 seconds will be reduced. <br> 8. The bot that completes the race in minimum time is declared the winner. <br> 9. The decision by the panel is final.</p>
-                    <!--
-<div class="card">
-    <h3>REGISTER NOW</h3>
-</div>
--->
                 </center>
             </div>
-            <div class="col-sm-6 jam wow slideInRight">
+            <div class="col-sm-6 card jam wow slideInRight" style="left:10px;">
                 <center>
                     <h2>JAM TO WIN IT</h2>
                     <h4>"It's time to tickle ur brain with circuits n electricity <br> Just charge ur brains Because JAM to win it <br>Is going to be crazy this time" (It's a Group event)</h4>
@@ -124,7 +132,7 @@
         </div><br>
         <hr>
         <div class="row">
-            <div class="col-sm-6 quiz wow slideInLeft">
+            <div class="col-sm-6 card quiz wow slideInLeft" style="left:-10px;">
                 <center>
                     <h2>TECHNICAL QUIZ</h2>
                     <h3>“The empire of future are the empires of mind”</h3>
@@ -132,26 +140,25 @@
                     </p>
                     <p style="text-align:left;"><b>Rules: </b><br> <b>Round – I:</b> A written quiz will be conducted in teams (two members per team) and the best 20 teams out of it will progress to next round. The maximum time provided for all the participants is 20 minutes <br><b>Round – II:</b> An oral quiz comprising of 3 rounds that promises to test not only your intelligence, but also the ability to stay calm under pressure. And the best 7 team out of it will progress to next round. <br><b> Round- III:</b> An buzzer round which deals with the dept of our domain and test the presence of knowledge. <br>
                     </p>
-
                 </center>
             </div>
-            <div class="col-sm-6 conn wow slideInRight">
+            <div class="col-sm-6 card conn wow slideInRight" style="left:10px;">
                 <center>
                     <h2>CONNECTIONS</h2>
-                    <h3>"An enthralling event to connect your neurons to complete your brain circuit!"</h3>
+                    <h3>"An enthralling event to connect your neurons to complete your brain circuit!"</h3><br>
                     <p>Get ready to trigger your technical knowledge by connecting your way through three rounds by using the clues in the pictures.</p>
-                </center>
-                <p><b>Rules:</b><br>1.Only two members are welcomed for a team. <br>2. College ID card is mandatory for registiration <br>3. Unfair game leads to disquallification of the team.</p>
+                </center><br>
+                <p><b>Rules:</b><br>1.Only two members are welcomed for a team. <br>2. College ID card is mandatory for registiration <br>3. Unfair game leads to disquallification of the team.</p><br><br>
 
             </div>
         </div>
     </div>
     <hr>
     <!-- section begin -->
-    <section>
+    <section class="bg-img">
         <div class="container register">
             <center>
-                <h2 class="wow pulse infinite"><img src="https://png.icons8.com/edit-property/ultraviolet/40" title="Edit Property" width="40" height="40"><b> REGISTER SOON</b></h2>
+                <h2 class="wow pulse infinite" style="color:white;"><img src="https://png.icons8.com/edit-property/ultraviolet/40" title="Edit Property" width="40" height="40"><b> REGISTER SOON</b></h2>
             </center>
             <div class="row">
                 <input class="form-control" type="text" name="name" id="name" placeholder="Name">
@@ -168,10 +175,10 @@
             <div class="row">
                 <div class="col-md-6" style="padding-left: 5px;">
                     <select class="form-control" type="text" name="year" id="year" placeholder="Year">
-                                                <option>IV</option>
-                                                <option>III</option>
-                                                <option>II</option>
-                                                <option>I</option>
+                                <option>IV</option>
+                                <option>III</option>
+                                 <option>II</option>
+                                 <option>I</option>
                                             </select>
                 </div>
                 <div class="col-md-6" style="padding-right: 5px;">
@@ -195,58 +202,59 @@
             </center>
         </div>
     </section>
-    <hr>
-    <section>
-
-        <div class="container">
-            <div id="story" class="container time-bg">
-                <center>
-                    <h1 class="time-head"><b>TIMELINE</b></h1>
-                </center>
-                <ul class="timeline">
-                    <li>
-                        <div class="direction-r wow bounceInRight">
-                            <div class="flag-wrapper"><span class="flag ">Registration</span><span class="time-wrapper"><span class="time">9:00 AM-10:00 AM</span></span>
+    <section class="bg-img1">
+        <div id="story" class="time-bg">
+            <div class="row">
+                <div class="col-sm-6"></div>
+                <div class="col-sm-6 padd">
+                    <center>
+                        <h1 class="time-head"><b>TIMELINE</b></h1>
+                    </center>
+                    <ul class="timeline">
+                        <li>
+                            <div class="direction-r wow bounceInRight">
+                                <div class="flag-wrapper"><span class="flag ">Registration</span><span class="time-wrapper"><span class="time">9:00 AM-10:00 AM</span></span>
+                                </div>
+                                <div class="desc">The participants should register and get ID card.</div>
                             </div>
-                            <div class="desc">The participants should register and get ID card.</div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="direction-l wow bounceInLeft">
-                            <div class="flag-wrapper"><span class="flag">Inauguration</span><span class="time-wrapper"><span class="time">10:00 AM</span></span>
+                        </li>
+                        <li>
+                            <div class="direction-l wow bounceInLeft">
+                                <div class="flag-wrapper"><span class="flag">Inauguration</span><span class="time-wrapper"><span class="time">10:00 AM</span></span>
+                                </div>
+                                <div class="desc">The inauguration will take place at auditorium .The sympo will be inaugurated by special cheif guest.</div>
                             </div>
-                            <div class="desc">The inauguration will take place at auditorium .The sympo will be inaugurated by special cheif guest.</div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="direction-r wow bounceInRight">
-                            <div class="flag-wrapper"><span class="flag">Paper presentation</span><span class="time-wrapper"><span class="time">10:30 AM</span></span>
+                        </li>
+                        <li>
+                            <div class="direction-r wow bounceInRight">
+                                <div class="flag-wrapper"><span class="flag">Paper presentation</span><span class="time-wrapper"><span class="time">10:30 AM</span></span>
+                                </div>
+                                <div class="desc">2017 as proved to be cool year so far for us , During Initial Months we had a new member to lead a pecular Concept and also we crowned to become the ISGW , Innothon's Winner ! </div>
                             </div>
-                            <div class="desc">2017 as proved to be cool year so far for us , During Initial Months we had a new member to lead a pecular Concept and also we crowned to become the ISGW , Innothon's Winner ! </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="direction-l wow bounceInLeft">
-                            <div class="flag-wrapper"><span class="flag">Events</span><span class="time-wrapper"><span class="time">11:00 AM</span></span>
+                        </li>
+                        <li>
+                            <div class="direction-l wow bounceInLeft">
+                                <div class="flag-wrapper"><span class="flag">Events</span><span class="time-wrapper"><span class="time">11:00 AM</span></span>
+                                </div>
+                                <div class="desc">Events will be started according to its respective time.</div>
                             </div>
-                            <div class="desc">Events will be started according to its respective time.</div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="direction-r wow bounceInRight">
-                            <div class="flag-wrapper"><span class="flag">Lunch</span><span class="time-wrapper"><span class="time">1:00 PM</span></span>
+                        </li>
+                        <li>
+                            <div class="direction-r wow bounceInRight">
+                                <div class="flag-wrapper"><span class="flag">Lunch</span><span class="time-wrapper"><span class="time">1:00 PM</span></span>
+                                </div>
+                                <div class="desc">Both Veg and Non-Veg food will be provided in college canteen.</div>
                             </div>
-                            <div class="desc">Both Veg and Non-Veg food will be provided in college canteen.</div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="direction-l wow bounceInLeft">
-                            <div class="flag-wrapper"><span class="flag"> Valedictory ceremony</span><span class="time-wrapper"><span class="time">3:00 PM</span></span>
+                        </li>
+                        <li>
+                            <div class="direction-l wow bounceInLeft">
+                                <div class="flag-wrapper"><span class="flag"> Valedictory ceremony</span><span class="time-wrapper"><span class="time">3:00 PM</span></span>
+                                </div>
+                                <div class="desc">It's the final part of sympo.The prize and participation certificate will be provided.</div>
                             </div>
-                            <div class="desc">It's the final part of sympo.The prize and participation certificate will be provided.</div>
-                        </div>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
