--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-sm-3">
                     <a href="https://play.google.com/store/apps/details?id=com.nagajothy.smazee.praestantia">
-                        <center> <img src="img/pre1.jpg">
+                        <center> <img src="img/Praestantia-logo.png" style="height:50px;,width:50px;">
                             <h2>APP DOWNLOADS</h2>
                         </center>
                     </a>
