--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>PRAESTANTIA 2K17</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
+    <meta name="description" content="A 10th national level symposium conducted by  Department of ECE">
+    <meta name="keywords" content="Praestantia Symposium ECE">
+    <meta name="author" content="Smazee Devlopment Labs">
     <link rel="stylesheet" href="css/text.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
