--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row info" id="info">
                 <div class="col-sm-3">
                     <center>
-                        <h2 id="views">0</h2>
+                        <h2 ><div id="sfc2rlha5x4b9k4dj7wmlkxeazj1qxku19y"></div><script type="text/javascript" src="https://counter6.freecounter.ovh/private/counter.js?c=2rlha5x4b9k4dj7wmlkxeazj1qxku19y&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter6.freecounter.ovh/private/freecounterstat.php?c=2rlha5x4b9k4dj7wmlkxeazj1qxku19y" border="0" title="website counter" alt="website counter"></a></noscript><a href="https://www.freecounterstat.com" title="website counter"><img src="https://counter6.freecounter.ovh/private/freecounterstat.php?c=2rlha5x4b9k4dj7wmlkxeazj1qxku19y" border="0" title="website counter" alt="website counter"></a></h2>
                         <h2>VIEWS</h2>
                     </center>
                 </div>
