--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row info" id="info">
                 <div class="col-sm-3">
                     <center>
-                        <h2 ><div id="sfc2rlha5x4b9k4dj7wmlkxeazj1qxku19y"></div><script type="text/javascript" src="https://counter6.freecounter.ovh/private/counter.js?c=2rlha5x4b9k4dj7wmlkxeazj1qxku19y&down=async" async></script></h2>
+                        <h2 ><a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=https://smazee-development-labs.github.io/modal/&digit=style/plain/3/&reloads=0" alt="" title="" border="0"></a><br /><a href="http://" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"></a></h2>
                         <h2>VIEWS</h2>
                     </center>
                 </div>
