--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row info" id="info">
                 <div class="col-sm-3">
                     <center>
-                        <h2 ><a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=https://smazee-development-labs.github.io/modal/&digit=style/plain/3/&reloads=0" alt="" title="" border="0"></a><br /><a href="http://" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"></a></h2>
+                        <h2 ><a href="http://www.praestantia.in" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=https://smazee-development-labs.github.io/modal/&digit=style/plain/3/&reloads=0" alt="" title="" border="0"></a><br /><a href="http://" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"></a></h2>
                         <h2>VIEWS</h2>
                     </center>
                 </div>
