--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h1 class="events">EVENTS</h1>
     <section class="sec-ppt">
         <div class="overlay-bg">
-            <div class="container relative ppt"><br><br>
+            <div class="container relative ppt" style="padding:0px 80px;"><br><br>
                 <h1> Paper Presentation</h1>
                 <h2>Last date to submit the papers: <b style="color:red;">15/8/2017</b></h2>
                 <p><b>The following rules should be followed while submitting your paper:</b><br> 1. It is madatory that, your paper should be in the IEEE format. <br> 2. A paper can be submitted , representing a maximum of two members. <br>3. The paper must be submitted only to the above mentioned mail Id.
@@ -116,7 +116,7 @@
     </section><br>
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 card roborace wow slideInLeft" style="left:-10px;">
+            <div class="col-sm-6 card roborace wow slideInLeft">
                 <center>
                     <h2>ROBORACE</h2>
                     <h3>"FOR RACERZZ"</h3>
@@ -131,9 +131,7 @@
                     <p style="text-align:left;"><b>Round 1:</b>The jumbled words are given to the contestants..in which contestants can form groups(max 3 min 2 in a group)..each active must try to find or crack the jumbled /mind tricky games in A MINUTE <br><b>Round 2:</b>The active minds are moved to the next round..in which 2 words are given to a group..within a given period of time to prepare he /she must link the 2 words n try to innovate something out of it..Which should be practically acceptable..each group members are given 5 MINUTES TO PREPARE. <br> <b>Round 3:</b>Electrocuted minds which are qualified for this round may relax n take a dumbsharad round based on the circuit selected by a member of the group and enact their circuit they got or try to find the technical word take by the team member</p>
                 </center>
             </div>
-
         </div><br>
-        <hr>
         <div class="row">
             <div class="col-sm-6 card quiz wow slideInLeft" style="left:-10px;">
                 <center>
@@ -261,7 +259,7 @@
             </div>
         </div>
     </section>
-    <hr><br>
+
     <!-- Container (Contact Section) -->
     <div class="con">
         <h2 class="text-center "><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2><br>
@@ -299,14 +297,13 @@
     <section class="social">
         <div class="container">
             <center>
-                <h3>SOCIAL MEDIA</h3><br>
+                <h3 style="color:white;">SOCIAL MEDIA</h3><br>
                 <div class="pad">
                     <a href="facebook.com"><img src="https://png.icons8.com/facebook/color/48" title="Facebook" width="48" height="48"></a>
                     <a href="facebook.com"><img src="https://png.icons8.com/instagram/color/48" title="Instagram" width="48" height="48"></a>
                     <a href="facebook.com"><img src="https://png.icons8.com/twitter/color/48" title="Twitter" width="48" height="48"></a>
                 </div>
             </center>
-
         </div><br></section>
     <script>
         // Set the date we're counting down to
@@ -334,7 +331,7 @@
                 clearInterval(x);
                 document.getElementById("counter").innerHTML = "NOW!!!";
             }
-        }, 5000);
+        }, 100);
 
     </script>
     <script src="js/materialize.js"></script>
